--- a/docs/howtos/solutions/microservices/caching/index-caching.mdx
+++ b/docs/howtos/solutions/microservices/caching/index-caching.mdx
@@ -39,7 +39,7 @@ To improve product search in an e-commerce application, you can implement one of
 
 :::tip
 
-If you use **Redis Enterprise**, cache prefetching is easier due to its support for JSON and search. You also get additional features such as real-time performance, High scalability, resiliency, and fault tolerance. You can also call upon high-availability features such as Active-Active geo-redundancy.
+If you use **Redis Enterprise**, cache aside is easier due to its support for JSON and search. You also get additional features such as real-time performance, High scalability, resiliency, and fault tolerance. You can also call upon high-availability features such as Active-Active geo-redundancy.
 
 :::
 
