fix typo in `index-riot.mdx`

--- a/docs/explore/riot/index-riot.mdx
+++ b/docs/explore/riot/index-riot.mdx
@@ -48,7 +48,7 @@ cd riot/riot-redis
 ### Step 3. Install via Homebrew (macOS)
 
 ```
-brew install jruaux/tap/riot-redis`
+brew install jruaux/tap/riot-redis
 ```
 
 ### Usage
