--- a/docs/howtos/solutions/caching-architecture/common-caching/caching-movie-app.mdx
+++ b/docs/howtos/solutions/caching-architecture/common-caching/caching-movie-app.mdx
@@ -1,4 +1,4 @@
-The demonstration application showcases a movie application that uses basic create, read, update, and delete (CRUD) operations.
+The demo application used in the rest of this tutorial showcases a movie application with basic create, read, update, and delete (CRUD) operations.
 ![demo-01](./images/demo-01.png)
 
 The movie application dashboard contains a search section at the top and a list of movie cards in the middle. The floating plus icon displays a pop-up when the user selects it, permitting the user to enter new movie details. The search section has a text search bar and a toggle link between text search and basic (that is, form-based) search. Each movie card has edit and delete icons, which are displayed when a mouse hovers over the card.
