fixing image links

--- a/docs/howtos/solutions/caching-architecture/cache-prefetching/index-cache-prefetching.mdx
+++ b/docs/howtos/solutions/caching-architecture/cache-prefetching/index-cache-prefetching.mdx
@@ -9,8 +9,8 @@ authors: [prasan, will]
 import Authors from '@theme/Authors';
 import CachingMovieAppDesign from '../common-caching/caching-movie-app.mdx';
 import SourceCodeMovieApp from '../common-caching/source-code-movie-app.mdx';
-import RedisInsightLanguageJson from './images/Redis-json-01.png';
-import RedisInsightCountryJson from './images/Redis-json-02.png';
+import RedisInsightLanguageJson from './images/redis-json-01.png';
+import RedisInsightCountryJson from './images/redis-json-02.png';
 
 <Authors frontMatter={frontMatter} />
 
